--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "This is a tank game!",
   "main": "app.js",
   "dependencies": {
-    "socket.io": "^1.0.6",
-    "express": "^4.6.1"
+    "body-parser": "^1.15.2",
+    "express": "^4.6.1",
+    "socket.io": "^1.0.6"
   },
   "devDependencies": {},
   "scripts": {
